--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -18,6 +18,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="mystyle.css">
+     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.10/css/weather-icons.min.css">
+     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css/family=Signika">
 </head>
 
 <body>
@@ -48,6 +51,32 @@
         <div class="bg-dark mt-4 col-lg-4" style="min-height: 100px;">
             <p id="second" class="text-white"></p>
         </div>
+{{!-- 
+        <div class="box">
+            <div class="today">today</div>
+            <div class="time">6:33 AM</div>
+            <div class="date">13th July</div>
+            <ul class="gambar-slider">
+                <li>
+                    <i id="size" class="fa-5x wi wi-day-thunderstorm"></i>
+                    <div class="city">Dhaka,Bangladesh</div>
+                    <div class="celcius" id="size-cel">25<i class="wi wi-degrees"></i></div>
+                    <div class="weather">Thunderstorm</div>
+                </li>
+                <li>
+                    <i id="size" class="fa-5x wi wi-day-sunny"></i>
+                    <div class="city">Tokyo,Japan</div>
+                    <div class="celcius" id="size-cel">15<i class="wi wi-degrees"></i></div>
+                    <div class="weather">Sunny</div>
+                </li>
+                <li>
+                    <i id="size" class="fa-5x wi wi-day-cloudy"></i>
+                    <div class="city">Denver,Denmark</div>
+                    <div class="celcius" id="size-cel">11<i class="wi wi-degrees"></i></div>
+                    <div class="weather">Cloudy</div>
+                </li>
+            </ul>
+        </div> --}}
 
     </div>
         
