--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -17,10 +17,6 @@
     <link rel="stylesheet" href="/css/head.css"> --}}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="mystyle.css">
-     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.10/css/weather-icons.min.css">
-     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css/family=Signika">
 </head>
 
 <body>
@@ -29,12 +25,6 @@
         
         {{>header}}
         <div class="row align-items-center justify-content-center">
-        {{!-- <div class="col-lg-12">
-         <h1 class="text-justify">Welcome To {{title}} Page</h1>
-        </div> --}}
-
-        {{!-- <p>Use this site to get your weather!</p> --}}
-        
         <form class="mt-5 col-lg-12">
             <div class="form-inline">
             <div class="col-lg-3"></div>    
@@ -45,41 +35,27 @@
 
         </div>
 
-        <div class="bg-dark mt-4 col-lg-4" style="min-height: 100px;">
-            <h1 id="first" class="text-white"></h1>
+        <div class="mt-4 col-lg-4" style="min-height: 100px;">
+            <h1 id="address" class="text-white"></h1>
         </div>
-        <div class="bg-dark mt-4 col-lg-4" style="min-height: 100px;">
-            <p id="second" class="text-white"></p>
+        <div class="mt-4 col-lg-4 text-white" style="min-height: 100px;">
+            <p id="temperature" class="text-white"></p>
+            <p id="cloud"></p>
+            <p id="humidity"></p>
+            <p id="pressure"></p>
+            <p id="windspeed"></p>
+            <p id="ozone"></p>
+            <p id="icon"></p>
+            <h1>This Shows Weather Summary Of Full Day</h1>
+            <p id="dailycloud"></p>
+            <p id="highesttemp"></p>
+            <p id="lowesttemp"></p>
+            <p id="dailyhumidity"></p>
+            <p id="dailypressure"></p>
+            <p id="dailywindspeed"></p>
+            <p id="dailyozone"></p>
         </div>
-{{!-- 
-        <div class="box">
-            <div class="today">today</div>
-            <div class="time">6:33 AM</div>
-            <div class="date">13th July</div>
-            <ul class="gambar-slider">
-                <li>
-                    <i id="size" class="fa-5x wi wi-day-thunderstorm"></i>
-                    <div class="city">Dhaka,Bangladesh</div>
-                    <div class="celcius" id="size-cel">25<i class="wi wi-degrees"></i></div>
-                    <div class="weather">Thunderstorm</div>
-                </li>
-                <li>
-                    <i id="size" class="fa-5x wi wi-day-sunny"></i>
-                    <div class="city">Tokyo,Japan</div>
-                    <div class="celcius" id="size-cel">15<i class="wi wi-degrees"></i></div>
-                    <div class="weather">Sunny</div>
-                </li>
-                <li>
-                    <i id="size" class="fa-5x wi wi-day-cloudy"></i>
-                    <div class="city">Denver,Denmark</div>
-                    <div class="celcius" id="size-cel">11<i class="wi wi-degrees"></i></div>
-                    <div class="weather">Cloudy</div>
-                </li>
-            </ul>
-        </div> --}}
-
     </div>
-        
 
     {{>footer}}
 
